--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </head>
     
     <body>
-        <div class="main">
-            <div class="contain">
+        <div class="main row">
+            <div class="col-sm-12 contain">
                 <img src="media/profile.jpg">
 
                 <h1 class="text">
@@ -26,10 +26,10 @@
                 </h1>
 
                 <a href="mailto:contact@samn.ca">
-                    <p class="text">
-                        contact@samn.ca
-                    </p>
+                    contact@samn.ca
                 </a>
+
+                <br>
                 
                 <a href="https://github.com/samn-c">
                     <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-github" viewBox="0 0 16 16">
