Language typo fix

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="el">
+<html lang="en">
     <head>
         <!-- Bootstrap and required meta tags-->
         <meta charset="utf-8">
