embed addition + image size reduction

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         <title>
             Sam Chowdhury
         </title>
+        
+        <!-- Embed details -->
+        <meta content="UofT ECE 2T4 / Class Representative" property="og:site_name">
+        <meta content="Sam Chowdhury" property="og:title">
+        <meta content="My portfolio website with links to various platforms and featured articles" property="og:description">
+        <meta content="https://samn.ca/media/profile.jpg" property="og:image">
+        <meta name="theme-color" content="#000000">
     </head>
     
     <body>
