--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Bootstrap and required meta tags-->
+        <!-- required meta tags-->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         
-        <!-- Override CSS -->
+        <!-- CSS -->
         <link rel="stylesheet" href="css/style.css">
 
+        <!-- icon -->
         <link rel="icon" href="media/icon.png">
 
         <title>
@@ -24,8 +24,8 @@
     </head>
     
     <body>
-        <div class="main row">
-            <div class="col-sm-12 contain">
+        <div class="main">
+            <div class="contain">
                 <div class="botpad">
                     <img src="media/profile.jpg">
 
@@ -94,8 +94,5 @@
                 </div>
             </div>
         </div>
-
-        <!-- Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
