modified arrangement and padding
to fit content on mobile devices

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="media/profile.jpg">
 
                     <h1 class="text">
-                        Sam Chowdhury
+                        sam chowdhury,
                     </h1>
 
                     <a href="mailto:contact@samn.ca" target="_blank">
@@ -40,7 +40,7 @@
 
                 <div>          
                     <p class="text">
-                        platforms
+                        platforms,
                     </p>
 
                     <!-- LinkedIn -->
@@ -82,8 +82,8 @@
                 </div>
                 
                 <div>                    
-                    <p class="text">
-                        showcase
+                    <p class="smalltext">
+                        showcase,
                     </p>
 
                     <!-- ECE295 -->
