embed title updates

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </title>
         
         <!-- Embed details -->
-        <meta content="UofT ECE 2T4 / Class Representative" property="og:site_name">
-        <meta content="Sam Chowdhury" property="og:title">
-        <meta content="My portfolio website with links to various platforms and featured articles" property="og:description">
+        <meta content="UofT ECE 2T4 / Finance Director and Class Representative @ ECE Club" property="og:site_name">
+        <meta content="sam chowdhury," property="og:title">
+        <meta content="my portfolio website with links to various platforms, projects and features," property="og:description">
         <meta content="https://samn.ca/media/profile.jpg" property="og:image">
         <meta name="theme-color" content="#000000">
     </head>
