fix mailto link

--- a/indexA.html
+++ b/indexA.html
@@ -55,7 +55,7 @@
                                 <span class="cursor"></span>
                             </div>    
                             
-                            <a href="mailto:contact@samn.ca">
+                            <a href="mailto:contact@samn.ca" target="_blank">
                                 contact@samn.ca
                             </a>
                         </div>
