--- a/indexA.html
+++ b/indexA.html
@@ -17,7 +17,7 @@
         
         <!-- Embed details -->
         <meta content="revolutionary project 2.0" property="og:site_name">
-        <meta content="samnskrit," property="og:title">
+        <meta content="sam chowdhury," property="og:title">
         <meta content="links to various platforms and featured articles" property="og:description">
         <meta content="https://samn.ca/media/profile.jpg" property="og:image">
         <meta name="theme-color" content="#000000">
