--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- CSS -->
-        <link rel="stylesheet" href="css/styleA.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <!-- icon -->
         <link rel="icon" href="media/icon.png">
