--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta content="revolutionary project 2.0" property="og:site_name">
         <meta content="sam chowdhury," property="og:title">
         <meta content="links to various platforms and featured articles" property="og:description">
-        <meta content="https://samn.ca/media/profile.png" property="og:image">
+        <meta content="https://samn.ca/media/profile.jpg" property="og:image">
         <meta name="theme-color" content="#000000">
     </head>
     
