compatible site complete

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         rotate your device or widen the window
                     </h1>
 
-                    <a href="alt" class="delayedLink" target="_blank">
+                    <a href="alt.html" class="delayedLink" target="_blank">
                         click here for compatible version
                     </a>
                 </div>
