rotate text overlap fix

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <g>
                         <use xlink:href="#circlePath" fill="none"/>
                         <text fill="#000">
-                            <textPath xlink:href="#circlePath">rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate,</textPath>
+                            <textPath xlink:href="#circlePath">, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate, rotate,</textPath>
                         </text>
                     </g>
                 </svg>
